--- a/FrontEnd/OnlineStore.BlazorUI/wwwroot/index.html
+++ b/FrontEnd/OnlineStore.BlazorUI/wwwroot/index.html
@@ -9,10 +9,14 @@
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="stylesheet" href="GlobalCss/Fonts.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css">
+
     <link href="OnlineStore.BlazorUI.styles.css" rel="stylesheet" />
 </head>
 
 <body>
+
     <div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
@@ -27,6 +31,14 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="GlobalCss/Foundation/js/vendor/jquery.js"></script>
+    <script src="GlobalCss/Foundation/js/vendor/what-input.js"></script>
+    <script src="GlobalCss/Foundation/js/vendor/foundation.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(document).foundation(); // Initialize Foundation
+        });
+    </script>
 </body>
 
 </html>
