--- a/FrontEnd/OnlineStore.BlazorUI/wwwroot/index.html
+++ b/FrontEnd/OnlineStore.BlazorUI/wwwroot/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="stylesheet" href="GlobalCss/Fonts.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css">
+    <link href="stylesheet" href="GlobalCss/Main.css" />
+    <link rel="stylesheet" href="GlobalCss/Foundation/css/foundation.css">
 
     <link href="OnlineStore.BlazorUI.styles.css" rel="stylesheet" />
 </head>
